test/fixtures/parse-error/options.js
module.exports = {
    parserOptions: {
        templateSettings: {
            interpolate: ["#{", "}"]
        }
    }
};
